[gd_scene load_steps=2 format=3 uid="uid://c02hgsmqqqj06"]

[ext_resource type="Script" path="res://Scripts/CharacterManager.gd" id="1_eevvx"]

[node name="CharacterManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eevvx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(1150, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 10
alignment = 1

[node name="Inventory" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Inventory"

[node name="CharacterSheet" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Character Sheet"

[connection signal="pressed" from="HBoxContainer/Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="HBoxContainer/CharacterSheet" to="." method="_on_character_sheet_pressed"]
